app/client/modules/Buttons/ButtonSupport.scss
a.buttonSupport {
    display: inline-block;
    color: $textcolor-light;
    font-size: 14px;
    padding: 5px 22px 6px 22px;
    border-radius: 12px;
    cursor: pointer;
    white-space: nowrap;
    user-select: none;
    text-decoration: none;

    &.paypal {
        background-color: #406c91;
    }

    &.patreon {
        background-color: #e65d48;
    }
}

a.buttonSupport:hover {
    background-color: #333333;
}


div.supportoptions {
    margin: 25px 0 25px 0;

    & > a {
        margin-left: 0;
    }

    & > a:last-child {
        margin-left: 8px;
    }
}

@media only screen and (max-width: 400px) {

    a.buttonSupport {
        display: block;
        text-align: center;
    }

    div.supportoptions {
        margin: 25px 0 25px 0;

        & > div {
            margin-left: 0;
        }

        & > div:last-child {
            margin-left: 0;
            margin-top: 10px;
        }
    }
}

